objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>SBE__c</fullName>
        <description>Name of the division to which the training material references</description>
        <label>SBE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EH</fullName>
                </value>
                <value>
                    <fullName>LSS</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
                <value>
                    <fullName>DX</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>GENERIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Use__c</fullName>
        <description>Indicates whether the content is for internal PKI use or can be publicly shared externally</description>
        <label>Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Nano__c</fullName>
        <label>Nano</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Environmental Research</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Development/Research</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Energy__c</fullName>
        <label>Energy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biomass</fullName>
                </value>
                <value>
                    <fullName>Petro/Refining</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instrument</fullName>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Date after which the material is considered obsolete</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EH_Forensics__c</fullName>
        <label>Forensics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Evidence</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Technique__c</fullName>
        <label>Technique</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Atomic Spectroscopy</fullName>
                </value>
                <value>
                    <fullName>Chromatography</fullName>
                </value>
                <value>
                    <fullName>Elemental Analysis</fullName>
                </value>
                <value>
                    <fullName>Elm</fullName>
                </value>
                <value>
                    <fullName>Functional Analysis</fullName>
                </value>
                <value>
                    <fullName>Hyphenated Technique</fullName>
                </value>
                <value>
                    <fullName>Molecular Spectroscopy</fullName>
                </value>
                <value>
                    <fullName>OneSource</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Thermal Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <description>Date the literature piece was created (not upload date)</description>
        <inlineHelpText>Please input document creation date. MM/YY</inlineHelpText>
        <label>Publication Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EH_Industrial__c</fullName>
        <label>Industrial</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced Materials</fullName>
                </value>
                <value>
                    <fullName>Architectural/Building Materials</fullName>
                </value>
                <value>
                    <fullName>Chemical/Fine Chemicals</fullName>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Cosmetics &amp; Personal Care</fullName>
                </value>
                <value>
                    <fullName>Lubricants</fullName>
                </value>
                <value>
                    <fullName>Mining, Minerals, Metals and Alloys</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Nutraceutical/Botanical/Natural Remedies</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Polymers/Plastics</fullName>
                </value>
                <value>
                    <fullName>Semiconductors/Electronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Rating_0_5__c</fullName>
        <label>Rating (0-5)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EH_Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aeroqual</fullName>
                </value>
                <value>
                    <fullName>Agilent Technologies</fullName>
                </value>
                <value>
                    <fullName>AirQualityEgg</fullName>
                </value>
                <value>
                    <fullName>Airsensa</fullName>
                </value>
                <value>
                    <fullName>Analytik Jena</fullName>
                </value>
                <value>
                    <fullName>Büchi</fullName>
                </value>
                <value>
                    <fullName>Dionex Corp</fullName>
                </value>
                <value>
                    <fullName>Dustduino</fullName>
                </value>
                <value>
                    <fullName>Envirowatch</fullName>
                </value>
                <value>
                    <fullName>Foss</fullName>
                </value>
                <value>
                    <fullName>GBC Scientific Equipment</fullName>
                </value>
                <value>
                    <fullName>Geotech</fullName>
                </value>
                <value>
                    <fullName>Hitachi Instruments</fullName>
                </value>
                <value>
                    <fullName>Jasco</fullName>
                </value>
                <value>
                    <fullName>LabTech</fullName>
                </value>
                <value>
                    <fullName>Mettler-Toledo International</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Nerds for nature</fullName>
                </value>
                <value>
                    <fullName>Netsch</fullName>
                </value>
                <value>
                    <fullName>ReliaSens</fullName>
                </value>
                <value>
                    <fullName>Shimadzu</fullName>
                </value>
                <value>
                    <fullName>Spectro Analytical Instruments</fullName>
                </value>
                <value>
                    <fullName>TA Instruments</fullName>
                </value>
                <value>
                    <fullName>Thermo Fisher Scientific</fullName>
                </value>
                <value>
                    <fullName>Varian</fullName>
                </value>
                <value>
                    <fullName>VWR International</fullName>
                </value>
                <value>
                    <fullName>Waters Corporation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Product_Line__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>Asset Informatics and Analytics</fullName>
                </value>
                <value>
                    <fullName>Asset Procurement &amp; Disposition</fullName>
                </value>
                <value>
                    <fullName>BVM</fullName>
                </value>
                <value>
                    <fullName>CHNSO Analysis</fullName>
                </value>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Data Mgnt &amp; Collaboration Platforms</fullName>
                </value>
                <value>
                    <fullName>DMA</fullName>
                </value>
                <value>
                    <fullName>DSA/TOF</fullName>
                </value>
                <value>
                    <fullName>DSC</fullName>
                </value>
                <value>
                    <fullName>Falling Number</fullName>
                </value>
                <value>
                    <fullName>Fluorescence Spectrophotometry</fullName>
                </value>
                <value>
                    <fullName>FT-IR</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>GC/MS</fullName>
                </value>
                <value>
                    <fullName>GC/MS/MS</fullName>
                </value>
                <value>
                    <fullName>Headspace</fullName>
                </value>
                <value>
                    <fullName>ICP-MS</fullName>
                </value>
                <value>
                    <fullName>ICP-OES</fullName>
                </value>
                <value>
                    <fullName>Information Services</fullName>
                </value>
                <value>
                    <fullName>Instrument Control &amp; Upgrades</fullName>
                </value>
                <value>
                    <fullName>Instrument Service &amp; Repair</fullName>
                </value>
                <value>
                    <fullName>Laboratory Relocation</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>LC/MS</fullName>
                </value>
                <value>
                    <fullName>Mercury Analysis Systems</fullName>
                </value>
                <value>
                    <fullName>Microwave Digestion</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>NIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Type_Of_File__c</fullName>
        <label>Type of File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>csv</fullName>
                </value>
                <value>
                    <fullName>doc</fullName>
                </value>
                <value>
                    <fullName>dxp</fullName>
                </value>
                <value>
                    <fullName>html</fullName>
                </value>
                <value>
                    <fullName>jpg</fullName>
                </value>
                <value>
                    <fullName>mp3/mp4</fullName>
                </value>
                <value>
                    <fullName>pdf</fullName>
                </value>
                <value>
                    <fullName>png</fullName>
                </value>
                <value>
                    <fullName>ppt</fullName>
                </value>
                <value>
                    <fullName>wav</fullName>
                </value>
                <value>
                    <fullName>xls</fullName>
                </value>
                <value>
                    <fullName>zip files</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Environmental__c</fullName>
        <label>Environmental</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indoor Air</fullName>
                </value>
                <value>
                    <fullName>Outdoor Air</fullName>
                </value>
                <value>
                    <fullName>Emissions</fullName>
                </value>
                <value>
                    <fullName>Soil</fullName>
                </value>
                <value>
                    <fullName>Drinking Water</fullName>
                </value>
                <value>
                    <fullName>Waste Water</fullName>
                </value>
                <value>
                    <fullName>Environmental Waters</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Food Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Food R&amp;D &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Forensics</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Nano</fullName>
                </value>
                <value>
                    <fullName>Pharma &amp; Biotech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Original_Owner__c</fullName>
        <label>Original Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EH_Pharma_Biotech__c</fullName>
        <label>Pharma Biotech</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Product Development/Research</fullName>
                </value>
                <value>
                    <fullName>Regulatory Testing</fullName>
                </value>
                <value>
                    <fullName>Safety/Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Type_Of_Content__c</fullName>
        <label>Type of Content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertisements</fullName>
                </value>
                <value>
                    <fullName>Application Notes</fullName>
                </value>
                <value>
                    <fullName>Application Sheet</fullName>
                </value>
                <value>
                    <fullName>Articles</fullName>
                </value>
                <value>
                    <fullName>Banner/Email Signature</fullName>
                </value>
                <value>
                    <fullName>Brochures</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Case Studies</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Certificates (CE, 9001, 14001)</fullName>
                </value>
                <value>
                    <fullName>Cheat Sheet</fullName>
                </value>
                <value>
                    <fullName>Compendium</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Flyers</fullName>
                </value>
                <value>
                    <fullName>How-To</fullName>
                </value>
                <value>
                    <fullName>Infographics</fullName>
                </value>
                <value>
                    <fullName>Manuals</fullName>
                </value>
                <value>
                    <fullName>Marketing News</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Packing Lists</fullName>
                </value>
                <value>
                    <fullName>PDL</fullName>
                </value>
                <value>
                    <fullName>Photos</fullName>
                </value>
                <value>
                    <fullName>Playbook</fullName>
                </value>
                <value>
                    <fullName>Preparing Your Lab</fullName>
                </value>
                <value>
                    <fullName>Presentations</fullName>
                </value>
                <value>
                    <fullName>Pricing list</fullName>
                </value>
                <value>
                    <fullName>Product Notes</fullName>
                </value>
                <value>
                    <fullName>Promotional Posters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Content_Language__c</fullName>
        <label>Content Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Publication_Year__c</fullName>
        <label>Publication Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Number_of_Ratings__c</fullName>
        <label>Number of Ratings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EH_Food_Manufacturing__c</fullName>
        <label>Food Manufacturing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Grain</fullName>
                </value>
                <value>
                    <fullName>Meat</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Processed foods</fullName>
                </value>
                <value>
                    <fullName>Tobacco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EH_Food_R_D_and_Testing__c</fullName>
        <label>Food R&amp;D and Testing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adulteration/Provenance</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Nutritional Analysis</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Product Development/Research</fullName>
                </value>
                <value>
                    <fullName>Regulatory Testing</fullName>
                </value>
                <value>
                    <fullName>Safety/Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Marketing_Material</fullName>
        <active>true</active>
        <label>Marketing Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Materials</fullName>
        <active>true</active>
        <description>Describes the fields associated with internal training materials</description>
        <label>Training Materials</label>
    </recordTypes>
    <recordTypes>
        <fullName>EH_GLOBAL_CONTENT_LIBRARY</fullName>
        <active>true</active>
        <description>Metadata associated with the EH Global Content Library Sync with Sharepoint</description>
        <label>EH Global Content Library</label>
    </recordTypes>
</CustomObject>